--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/modern-normalize.min.css">
+    <link rel="stylesheet" href="./css/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body">
@@ -20,7 +20,7 @@
       <div class="header-div container">
         <nav class="header-nav">
           <!-- Logo -->
-          
+
           <a href="./index.html" class="header-logo link"
             >Web <span class="header-span-logo">Studio</span></a
           >
@@ -31,7 +31,9 @@
               <a href="./index.html" class="header-list-menu link">Studio</a>
             </li>
             <li>
-              <a href="./portfolio.html" class="header-list-menu link">Portfolio</a>
+              <a href="./portfolio.html" class="header-list-menu link"
+                >Portfolio</a
+              >
             </li>
             <li>
               <a href="" class="header-list-menu link">Contacts</a>
@@ -62,18 +64,7 @@
 
       <section class="hero-section">
         <div class="container">
-          <h1
-            class="title-hero"
-            style="
-              font-size: 56px;
-              line-height: 1.07;
-              text-align: center;
-              letter-spacing: 0.02em;
-              color: #ffffff;
-            "
-          >
-            Effective Solutions for Your Business
-          </h1>
+          <h1 class="title-hero">Effective Solutions for Your Business</h1>
           <button type="button" class="button">Order Service</button>
         </div>
       </section>
@@ -81,84 +72,32 @@
       <!-- section 1  -->
       <section class="section-one">
         <div class="container">
-          <h2 class="title-section-one visually-hidden " >Our benefits</h2>
+          <h2 class="title-section-one visually-hidden">Our benefits</h2>
           <ul class="setion-one-list list">
             <li class="section-one-list-features">
-              <h3
-                class="title-hthree"
-                style="
-                  font-weight: 500;
-                  font-size: 20px;
-                  line-height: 1.2;
-                  letter-spacing: 0.02em;
-                "
-              >
-                Strategy
-              </h3>
-              <p
-                class="paragraph-hthree"
-                style="line-height: 1.5; letter-spacing: 0.02em"
-              >
+              <h3 class="title-hthree">Strategy</h3>
+              <p class="paragraph-hthree">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class="section-one-list-features">
-              <h3
-                class="title-hthree"
-                style="
-                  font-weight: 500;
-                  font-size: 20px;
-                  line-height: 1.2;
-                  letter-spacing: 0.02em;
-                "
-              >
-                Punctuality
-              </h3>
-              <p
-                class="paragraph-hthree"
-                style="line-height: 1.5; letter-spacing: 0.02em"
-              >
+              <h3 class="title-hthree">Punctuality</h3>
+              <p class="paragraph-hthree">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="section-one-list-features">
-              <h3
-                class="title-hthree"
-                style="
-                  font-weight: 500;
-                  font-size: 20px;
-                  line-height: 1.2;
-                  letter-spacing: 0.02em;
-                "
-              >
-                Diligence
-              </h3>
-              <p
-                class="paragraph-hthree"
-                style="line-height: 1.5; letter-spacing: 0.02em"
-              >
+              <h3 class="title-hthree">Diligence</h3>
+              <p class="paragraph-hthree">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="section-one-list-features">
-              <h3
-                class="title-hthree"
-                style="
-                  font-weight: 500;
-                  font-size: 20px;
-                  line-height: 1.2;
-                  letter-spacing: 0.02em;
-                "
-              >
-                Technologies
-              </h3>
-              <p
-                class="paragraph-hthree"
-                style="line-height: 1.5; letter-spacing: 0.02em"
-              >
+              <h3 class="title-hthree">Technologies</h3>
+              <p class="paragraph-hthree">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -179,8 +118,9 @@
               text-transform: capitalize;
             "
           >
-            What are we doing </h2>
-  
+            What are we doing
+          </h2>
+
           <ul class="section-two-list list">
             <li class="section-two-list-work">
               <img src="./images/section-2/img1.jpg" alt="img 1" width="360" />
@@ -206,8 +146,10 @@
                 alt="Product Designer"
                 width="264"
               />
-              <div class="section-three-div"><h3 class="title-team">Mark Guerrero</h3>
-              <p class="paragraph-hthree">Product Designer</p></div>
+              <div class="section-three-div">
+                <h3 class="title-team">Mark Guerrero</h3>
+                <p class="paragraph-hthree">Product Designer</p>
+              </div>
             </li>
             <li class="section-three-list-team">
               <img
@@ -215,8 +157,10 @@
                 alt="Frontend Developer"
                 width="264"
               />
-             <div class="section-three-div"> <h3 class="title-team">Tom Ford</h3>
-              <p class="paragraph-hthree">Frontend Developer</p></div>
+              <div class="section-three-div">
+                <h3 class="title-team">Tom Ford</h3>
+                <p class="paragraph-hthree">Frontend Developer</p>
+              </div>
             </li>
             <li class="section-three-list-team">
               <img
@@ -224,8 +168,10 @@
                 alt="Marketing"
                 width="264"
               />
-              <div class="section-three-div"><h3 class="title-team">Camila Garcia</h3>
-              <p class="paragraph-hthree">Marketing</p></div>
+              <div class="section-three-div">
+                <h3 class="title-team">Camila Garcia</h3>
+                <p class="paragraph-hthree">Marketing</p>
+              </div>
             </li>
             <li class="section-three-list-team">
               <img
@@ -233,8 +179,10 @@
                 alt="UI Designer"
                 width="264"
               />
-             <div class="section-three-div"> <h3 class="title-team">Daniel Wilson</h3>
-              <p class="paragraph-hthree">UI Designer</p></div>
+              <div class="section-three-div">
+                <h3 class="title-team">Daniel Wilson</h3>
+                <p class="paragraph-hthree">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -243,14 +191,16 @@
 
     <!-- Footer srction     -->
     <footer class="footer" style="background-color: #2e2f42">
-      <div class="container"><a href="./index.html" class="footer-logo link"
-        >Web
-        <span class="footer-span-logo" style="color: #f4f4fd">Studio</span></a
-      >
-      <p class="footer-paragraph">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p></div>
+      <div class="container">
+        <a href="./index.html" class="footer-logo link"
+          >Web
+          <span class="footer-span-logo" style="color: #f4f4fd">Studio</span></a
+        >
+        <p class="footer-paragraph">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
