--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
     <main>
       <section class="pfl-main-section">
         <div class="container">
-          <h1 hidden class="visually-hidden">Portfolio</h1>
+          <h1 hidden class="visually-hidden margin">Portfolio</h1>
           <!-- Buttons -->
 
           <ul class="pfl-buttons list">
@@ -87,8 +87,8 @@
                   width="360"
                 />
                 <div class="pfl-main-div">
-                  <h2 class="title-htwo">Banking App Interface Concept</h2>
-                  <p class="text">App</p>
+                  <h2 class="title-htwo margin">Banking App Interface Concept</h2>
+                  <p class="text margin">App</p>
                 </div>
               </a>
             </li>
@@ -100,8 +100,8 @@
                   width="360"
                 />
                 <div class="pfl-main-div">
-                  <h2 class="title-htwo">Cashless Payment</h2>
-                  <p class="text">Marketing</p>
+                  <h2 class="title-htwo margin">Cashless Payment</h2>
+                  <p class="text margin">Marketing</p>
                 </div>
               </a>
             </li>
@@ -113,8 +113,8 @@
                   width="360"
                 />
                 <div class="pfl-main-div">
-                  <h2 class="title-htwo">Meditation App</h2>
-                  <p class="text">App</p>
+                  <h2 class="title-htwo margin">Meditation App</h2>
+                  <p class="text margin">App</p>
                 </div>
               </a>
             </li>
@@ -129,8 +129,8 @@
                   width="360"
                 />
                 <div class="pfl-main-div">
-                  <h2 class="title-htwo">Taxi Service</h2>
-                  <p class="text">Marketing</p>
+                  <h2 class="title-htwo margin">Taxi Service</h2>
+                  <p class="text margin">Marketing</p>
                 </div>
               </a>
             </li>
@@ -142,8 +142,8 @@
                   width="360"
                 />
                 <div class="pfl-main-div">
-                  <h2 class="title-htwo">Screen Illustrations</h2>
-                  <p class="text">Design</p>
+                  <h2 class="title-htwo margin">Screen Illustrations</h2>
+                  <p class="text margin">Design</p>
                 </div>
               </a>
             </li>
@@ -155,8 +155,8 @@
                   width="360"
                 />
                 <div class="pfl-main-div">
-                  <h2 class="title-htwo">Online Courses</h2>
-                  <p class="text">Marketing</p>
+                  <h2 class="title-htwo margin">Online Courses</h2>
+                  <p class="text margin">Marketing</p>
                 </div>
               </a>
             </li>
@@ -171,8 +171,8 @@
                   width="360"
                 />
                 <div class="pfl-main-div">
-                  <h2 class="title-htwo">Instagram Stories Concept</h2>
-                  <p class="text">Design</p>
+                  <h2 class="title-htwo margin">Instagram Stories Concept</h2>
+                  <p class="text margin">Design</p>
                 </div>
               </a>
             </li>
@@ -184,8 +184,8 @@
                   width="360"
                 />
                 <div class="pfl-main-div">
-                  <h2 class="title-htwo">Organic Food</h2>
-                  <p class="text">Web Site</p>
+                  <h2 class="title-htwo margin">Organic Food</h2>
+                  <p class="text margin">Web Site</p>
                 </div>
               </a>
             </li>
@@ -197,8 +197,8 @@
                   width="360"
                 />
                 <div class="pfl-main-div">
-                  <h2 class="title-htwo">Fresh Coffee</h2>
-                  <p class="text">Web Site</p>
+                  <h2 class="title-htwo margin">Fresh Coffee</h2>
+                  <p class="text margin">Web Site</p>
                 </div>
               </a>
             </li>
@@ -212,7 +212,7 @@
         <a href="./index.html" class="footer-logo link"
           >Web <span class="footer-span-logo">Studio</span></a
         >
-        <p class="footer-paragraph">
+        <p class="footer-paragraph margin">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
