--- a/index.html
+++ b/index.html
@@ -72,32 +72,32 @@
       <!-- section 1  -->
       <section class="section-one">
         <div class="container">
-          <h2 class="title-section-one visually-hidden margin">Our benefits</h2>
+          <h2 class="title-section-one visually-hidden">Our benefits</h2>
           <ul class="setion-one-list list">
             <li class="section-one-list-features">
-              <h3 class="title-hthree margin">Strategy</h3>
-              <p class="paragraph-hthree margin">
+              <h3 class="title-hthree">Strategy</h3>
+              <p class="paragraph-hthree">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li> 
             <li class="section-one-list-features">
-              <h3 class="title-hthree margin">Punctuality</h3>
-              <p class="paragraph-hthree margin">
+              <h3 class="title-hthree">Punctuality</h3>
+              <p class="paragraph-hthree">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="section-one-list-features">
-              <h3 class="title-hthree margin">Diligence</h3>
-              <p class="paragraph-hthree margin">
+              <h3 class="title-hthree">Diligence</h3>
+              <p class="paragraph-hthree">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="section-one-list-features">
-              <h3 class="title-hthree margin">Technologies</h3>
-              <p class="paragraph-hthree margin">
+              <h3 class="title-hthree">Technologies</h3>
+              <p class="paragraph-hthree">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -109,7 +109,7 @@
       <!-- section 2  -->
       <section class="section-two">
         <div class="container">
-          <h2 class="title-section margin">What are we doing</h2>
+          <h2 class="title-section">What are we doing</h2>
 
           <ul class="section-two-list list">
             <li class="section-two-list-work">
@@ -128,7 +128,7 @@
       <!-- section 3  -->
       <section class="section-three">
         <div class="container">
-          <h2 class="title-section margin">Our Team</h2>
+          <h2 class="title-section">Our Team</h2>
           <ul class="section-three-list list">
             <li class="section-three-list-team">
               <img
@@ -137,8 +137,8 @@
                 width="264"
               />
               <div class="section-three-div">
-                <h3 class="title-team margin">Mark Guerrero</h3>
-                <p class="paragraph-hthree margin">Product Designer</p>
+                <h3 class="title-team">Mark Guerrero</h3>
+                <p class="paragraph-hthree">Product Designer</p>
               </div>
             </li>
             <li class="section-three-list-team">
@@ -148,8 +148,8 @@
                 width="264"
               />
               <div class="section-three-div">
-                <h3 class="title-team margin">Tom Ford</h3>
-                <p class="paragraph-hthree margin">Frontend Developer</p>
+                <h3 class="title-team">Tom Ford</h3>
+                <p class="paragraph-hthree">Frontend Developer</p>
               </div>
             </li>
             <li class="section-three-list-team">
@@ -159,8 +159,8 @@
                 width="264"
               />
               <div class="section-three-div">
-                <h3 class="title-team margin">Camila Garcia</h3>
-                <p class="paragraph-hthree margin">Marketing</p>
+                <h3 class="title-team">Camila Garcia</h3>
+                <p class="paragraph-hthree">Marketing</p>
               </div>
             </li>
             <li class="section-three-list-team">
@@ -170,8 +170,8 @@
                 width="264"
               />
               <div class="section-three-div">
-                <h3 class="title-team margin">Daniel Wilson</h3>
-                <p class="paragraph-hthree margin">UI Designer</p>
+                <h3 class="title-team">Daniel Wilson</h3>
+                <p class="paragraph-hthree">UI Designer</p>
               </div>
             </li>
           </ul>
@@ -185,7 +185,7 @@
         <a href="./index.html" class="footer-logo link"
           >Web <span class="footer-span-logo">Studio</span></a
         >
-        <p class="footer-paragraph margin">
+        <p class="footer-paragraph">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
