--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               />
               <div class="section-three-div">
                 <h3 class="title-team">Mark Guerrero</h3>
-                <p class="paragraph-hthree">Product Designer</p>
+                <p class="paragraph-team">Product Designer</p>
               </div>
             </li>
             <li class="section-three-list-team">
@@ -149,7 +149,7 @@
               />
               <div class="section-three-div">
                 <h3 class="title-team">Tom Ford</h3>
-                <p class="paragraph-hthree">Frontend Developer</p>
+                <p class="paragraph-team">Frontend Developer</p>
               </div>
             </li>
             <li class="section-three-list-team">
@@ -160,7 +160,7 @@
               />
               <div class="section-three-div">
                 <h3 class="title-team">Camila Garcia</h3>
-                <p class="paragraph-hthree">Marketing</p>
+                <p class="paragraph-team">Marketing</p>
               </div>
             </li>
             <li class="section-three-list-team">
@@ -171,7 +171,7 @@
               />
               <div class="section-three-div">
                 <h3 class="title-team">Daniel Wilson</h3>
-                <p class="paragraph-hthree">UI Designer</p>
+                <p class="paragraph-team">UI Designer</p>
               </div>
             </li>
           </ul>
